@@ -87,8 +87,12 @@ typedef struct
 	char			*name_orig;
 	char			*key;
 	char			*key_orig;
+	char			*units;
+	char			*units_orig;
 	char			*params;
 	char			*params_orig;
+	char			*ipmi_sensor;
+	char			*ipmi_sensor_orig;
 	char			*snmp_oid;
 	char			*snmp_oid_orig;
 	char			*description;
@@ -107,8 +111,12 @@ static void	lld_item_free(zbx_lld_item_t *item)
 	zbx_free(item->name_orig);
 	zbx_free(item->key);
 	zbx_free(item->key_orig);
+	zbx_free(item->units);
+	zbx_free(item->units_orig);
 	zbx_free(item->params);
 	zbx_free(item->params_orig);
+	zbx_free(item->ipmi_sensor);
+	zbx_free(item->ipmi_sensor_orig);
 	zbx_free(item->snmp_oid);
 	zbx_free(item->snmp_oid_orig);
 	zbx_free(item->description);
@@ -129,10 +137,10 @@ static void	lld_item_free(zbx_lld_item_t *item)
  ******************************************************************************/
 static void	lld_items_get(zbx_uint64_t parent_itemid, zbx_vector_ptr_t *items,
 		unsigned char type, unsigned char value_type, unsigned char data_type, int delay,
-		const char *delay_flex, int history, int trends, const char *trapper_hosts, const char *units,
-		unsigned char multiplier, unsigned char delta, const char *formula, const char *logtimefmt,
-		zbx_uint64_t valuemapid, const char *ipmi_sensor, const char *snmp_community, const char *port,
-		const char *snmpv3_securityname, unsigned char snmpv3_securitylevel, unsigned char snmpv3_authprotocol,
+		const char *delay_flex, int history, int trends, const char *trapper_hosts, unsigned char multiplier,
+		unsigned char delta, const char *formula, const char *logtimefmt, zbx_uint64_t valuemapid,
+		const char *snmp_community, const char *port, const char *snmpv3_securityname,
+		unsigned char snmpv3_securitylevel, unsigned char snmpv3_authprotocol,
 		const char *snmpv3_authpassphrase, unsigned char snmpv3_privprotocol, const char *snmpv3_privpassphrase,
 		unsigned char authtype, const char *username, const char *password, const char *publickey,
 		const char *privatekey, const char *description, zbx_uint64_t interfaceid,
@@ -199,8 +207,8 @@ static void	lld_items_get(zbx_uint64_t parent_itemid, zbx_vector_ptr_t *items,
 		if (0 != strcmp(row[13], trapper_hosts))
 			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_TRAPPER_HOSTS;
 
-		if (0 != strcmp(row[14], units))
-			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_UNITS;
+		item->units = zbx_strdup(NULL, row[14]);
+		item->units_orig = NULL;
 
 		if ((unsigned char)atoi(row[15]) != multiplier)
 			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_MULTIPLIER;
@@ -221,8 +229,8 @@ static void	lld_items_get(zbx_uint64_t parent_itemid, zbx_vector_ptr_t *items,
 		item->params = zbx_strdup(NULL, row[20]);
 		item->params_orig = NULL;
 
-		if (0 != strcmp(row[21], ipmi_sensor))
-			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_IPMI_SENSOR;
+		item->ipmi_sensor = zbx_strdup(NULL, row[21]);
+		item->ipmi_sensor_orig = NULL;
 
 		if (0 != strcmp(row[22], snmp_community))
 			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_SNMP_COMMUNITY;
@@ -393,8 +401,12 @@ static void	lld_items_validate(zbx_uint64_t hostid, zbx_vector_ptr_t *items, cha
 				ZBX_FLAG_LLD_ITEM_UPDATE_NAME, ITEM_NAME_LEN, error);
 		lld_validate_item_field(item, &item->key, &item->key_orig,
 				ZBX_FLAG_LLD_ITEM_UPDATE_KEY, ITEM_KEY_LEN, error);
+		lld_validate_item_field(item, &item->units, &item->units_orig,
+				ZBX_FLAG_LLD_ITEM_UPDATE_UNITS, ITEM_UNITS_LEN, error);
 		lld_validate_item_field(item, &item->params, &item->params_orig,
 				ZBX_FLAG_LLD_ITEM_UPDATE_PARAMS, ITEM_PARAM_LEN, error);
+		lld_validate_item_field(item, &item->ipmi_sensor, &item->ipmi_sensor_orig,
+				ZBX_FLAG_LLD_ITEM_UPDATE_IPMI_SENSOR, ITEM_IPMI_SENSOR_LEN, error);
 		lld_validate_item_field(item, &item->snmp_oid, &item->snmp_oid_orig,
 				ZBX_FLAG_LLD_ITEM_UPDATE_SNMP_OID, ITEM_SNMP_OID_LEN, error);
 		lld_validate_item_field(item, &item->description, &item->description_orig,
@@ -522,8 +534,8 @@ static void	lld_items_validate(zbx_uint64_t hostid, zbx_vector_ptr_t *items, cha
 }
 
 static void	lld_item_make(zbx_vector_ptr_t *items, const char *name_proto, const char *key_proto,
-		const char *params_proto, const char *snmp_oid_proto, const char *description_proto,
-		struct zbx_json_parse *jp_row)
+		const char *units_proto, const char *params_proto, const char *ipmi_sensor_proto,
+		const char *snmp_oid_proto, const char *description_proto, struct zbx_json_parse *jp_row)
 {
 	const char	*__function_name = "lld_make_item";
 
@@ -565,10 +577,20 @@ static void	lld_item_make(zbx_vector_ptr_t *items, const char *name_proto, const
 		item->key_orig = NULL;
 		substitute_key_macros(&item->key, NULL, NULL, jp_row, MACRO_TYPE_ITEM_KEY, NULL, 0);
 
+		item->units = zbx_strdup(NULL, units_proto);
+		item->units_orig = NULL;
+		substitute_discovery_macros(&item->units, jp_row, ZBX_MACRO_ANY, NULL, 0);
+		zbx_lrtrim(item->units, ZBX_WHITESPACE);
+
 		item->params = zbx_strdup(NULL, params_proto);
 		item->params_orig = NULL;
 		substitute_discovery_macros(&item->params, jp_row, ZBX_MACRO_ANY, NULL, 0);
 		zbx_lrtrim(item->params, ZBX_WHITESPACE);
+
+		item->ipmi_sensor = zbx_strdup(NULL, ipmi_sensor_proto);
+		item->ipmi_sensor_orig = NULL;
+		substitute_discovery_macros(&item->ipmi_sensor, jp_row, ZBX_MACRO_ANY, NULL, 0);
+		/* zbx_lrtrim(item->ipmi_sensor, ZBX_WHITESPACE); is not missing here */
 
 		item->snmp_oid = zbx_strdup(NULL, snmp_oid_proto);
 		item->snmp_oid_orig = NULL;
@@ -606,6 +628,17 @@ static void	lld_item_make(zbx_vector_ptr_t *items, const char *name_proto, const
 			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_KEY;
 		}
 
+		buffer = zbx_strdup(buffer, units_proto);
+		substitute_discovery_macros(&buffer, jp_row, ZBX_MACRO_ANY, NULL, 0);
+		zbx_lrtrim(buffer, ZBX_WHITESPACE);
+		if (0 != strcmp(item->units, buffer))
+		{
+			item->units_orig = item->units;
+			item->units = buffer;
+			buffer = NULL;
+			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_UNITS;
+		}
+
 		buffer = zbx_strdup(buffer, params_proto);
 		substitute_discovery_macros(&buffer, jp_row, ZBX_MACRO_ANY, NULL, 0);
 		zbx_lrtrim(buffer, ZBX_WHITESPACE);
@@ -615,6 +648,17 @@ static void	lld_item_make(zbx_vector_ptr_t *items, const char *name_proto, const
 			item->params = buffer;
 			buffer = NULL;
 			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_PARAMS;
+		}
+
+		buffer = zbx_strdup(buffer, ipmi_sensor_proto);
+		substitute_discovery_macros(&buffer, jp_row, ZBX_MACRO_ANY, NULL, 0);
+		/* zbx_lrtrim(buffer, ZBX_WHITESPACE); is not missing here */
+		if (0 != strcmp(item->ipmi_sensor, buffer))
+		{
+			item->ipmi_sensor_orig = item->ipmi_sensor;
+			item->ipmi_sensor = buffer;
+			buffer = NULL;
+			item->flags |= ZBX_FLAG_LLD_ITEM_UPDATE_IPMI_SENSOR;
 		}
 
 		buffer = zbx_strdup(buffer, snmp_oid_proto);
@@ -650,8 +694,8 @@ static void	lld_item_make(zbx_vector_ptr_t *items, const char *name_proto, const
 }
 
 static void	lld_items_make(zbx_vector_ptr_t *items, const char *name_proto, const char *key_proto,
-		const char *params_proto, const char *snmp_oid_proto, const char *description_proto,
-		zbx_vector_ptr_t *lld_rows)
+		const char *units_proto, const char *params_proto, const char *ipmi_sensor_proto,
+		const char *snmp_oid_proto, const char *description_proto, zbx_vector_ptr_t *lld_rows)
 {
 	int	i;
 
@@ -659,8 +703,8 @@ static void	lld_items_make(zbx_vector_ptr_t *items, const char *name_proto, cons
 	{
 		zbx_lld_row_t	*lld_row = (zbx_lld_row_t *)lld_rows->values[i];
 
-		lld_item_make(items, name_proto, key_proto, params_proto, snmp_oid_proto, description_proto,
-				&lld_row->jp_row);
+		lld_item_make(items, name_proto, key_proto, units_proto, params_proto, ipmi_sensor_proto,
+				snmp_oid_proto, description_proto, &lld_row->jp_row);
 	}
 
 	zbx_vector_ptr_sort(items, ZBX_DEFAULT_UINT64_PTR_COMPARE_FUNC);
@@ -778,13 +822,13 @@ static void	lld_applications_make(zbx_uint64_t parent_itemid, zbx_vector_ptr_t *
 static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_vector_ptr_t *items,
 		const char *key_proto, unsigned char type, unsigned char value_type, unsigned char data_type, int delay,
 		const char *delay_flex, int history, int trends, unsigned char status, const char *trapper_hosts,
-		const char *units, unsigned char multiplier, unsigned char delta, const char *formula,
-		const char *logtimefmt, zbx_uint64_t valuemapid, const char *ipmi_sensor, const char *snmp_community,
-		const char *port, const char *snmpv3_securityname, unsigned char snmpv3_securitylevel,
-		unsigned char snmpv3_authprotocol, const char *snmpv3_authpassphrase, unsigned char snmpv3_privprotocol,
-		const char *snmpv3_privpassphrase, unsigned char authtype, const char *username, const char *password,
-		const char *publickey, const char *privatekey, zbx_uint64_t interfaceid,
-		zbx_vector_uint64_t *del_itemappids, const char *snmpv3_contextname)
+		unsigned char multiplier, unsigned char delta, const char *formula, const char *logtimefmt,
+		zbx_uint64_t valuemapid, const char *snmp_community, const char *port, const char *snmpv3_securityname,
+		unsigned char snmpv3_securitylevel, unsigned char snmpv3_authprotocol,
+		const char *snmpv3_authpassphrase, unsigned char snmpv3_privprotocol, const char *snmpv3_privpassphrase,
+		unsigned char authtype, const char *username, const char *password, const char *publickey,
+		const char *privatekey, zbx_uint64_t interfaceid, zbx_vector_uint64_t *del_itemappids,
+		const char *snmpv3_contextname)
 {
 	const char	*__function_name = "lld_items_save";
 
@@ -792,13 +836,12 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 	zbx_lld_item_t	*item;
 	zbx_uint64_t	itemid = 0, itemdiscoveryid = 0, itemappid = 0, flags = ZBX_FLAG_LLD_ITEM_UNSET;
 	char		*sql = NULL,
-			*key_proto_esc = NULL, *delay_flex_esc = NULL, *trapper_hosts_esc = NULL, *units_esc = NULL,
-			*formula_esc = NULL, *logtimefmt_esc = NULL, *ipmi_sensor_esc = NULL,
-			*snmp_community_esc = NULL, *port_esc = NULL, *snmpv3_securityname_esc = NULL,
-			*snmpv3_authpassphrase_esc = NULL, *snmpv3_privpassphrase_esc = NULL, *username_esc = NULL,
-			*password_esc = NULL, *publickey_esc = NULL, *privatekey_esc = NULL,
-			*snmpv3_contextname_esc = NULL,
-			*name_esc, *key_esc, *params_esc, *snmp_oid_esc, *description_esc;
+			*key_proto_esc = NULL, *delay_flex_esc = NULL, *trapper_hosts_esc = NULL,
+			*formula_esc = NULL, *logtimefmt_esc = NULL, *snmp_community_esc = NULL, *port_esc = NULL,
+			*snmpv3_securityname_esc = NULL, *snmpv3_authpassphrase_esc = NULL,
+			*snmpv3_privpassphrase_esc = NULL, *username_esc = NULL, *password_esc = NULL,
+			*publickey_esc = NULL, *privatekey_esc = NULL, *snmpv3_contextname_esc = NULL,
+			*name_esc, *key_esc, *units_esc, *params_esc, *ipmi_sensor_esc, *snmp_oid_esc, *description_esc;
 	size_t		sql_alloc = 8 * ZBX_KIBIBYTE, sql_offset = 0;
 	zbx_db_insert_t	db_insert, db_insert_idiscovery, db_insert_iapps;
 
@@ -867,14 +910,10 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 		delay_flex_esc = DBdyn_escape_string(delay_flex);
 	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_TRAPPER_HOSTS))
 		trapper_hosts_esc = DBdyn_escape_string(trapper_hosts);
-	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_UNITS))
-		units_esc = DBdyn_escape_string(units);
 	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_FORMULA))
 		formula_esc = DBdyn_escape_string(formula);
 	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_LOGTIMEFMT))
 		logtimefmt_esc = DBdyn_escape_string(logtimefmt);
-	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_IPMI_SENSOR))
-		ipmi_sensor_esc = DBdyn_escape_string(ipmi_sensor);
 	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_SNMP_COMMUNITY))
 		snmp_community_esc = DBdyn_escape_string(snmp_community);
 	if (0 != (flags & ZBX_FLAG_LLD_ITEM_UPDATE_PORT))
@@ -909,8 +948,8 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 
 			zbx_db_insert_add_values(&db_insert, item->itemid, item->name, item->key, hostid, (int)type,
 					(int)value_type, (int)data_type, delay, delay_flex, history, trends,
-					(int)status, trapper_hosts, units, (int)multiplier, (int)delta, formula,
-					logtimefmt, valuemapid, item->params, ipmi_sensor, snmp_community,
+					(int)status, trapper_hosts, item->units, (int)multiplier, (int)delta, formula,
+					logtimefmt, valuemapid, item->params, item->ipmi_sensor, snmp_community,
 					item->snmp_oid, port, snmpv3_securityname, (int)snmpv3_securitylevel,
 					(int)snmpv3_authprotocol, snmpv3_authpassphrase, (int)snmpv3_privprotocol,
 					snmpv3_privpassphrase, (int)authtype, username, password, publickey, privatekey,
@@ -988,8 +1027,10 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 				}
 				if (0 != (item->flags & ZBX_FLAG_LLD_ITEM_UPDATE_UNITS))
 				{
+					units_esc = DBdyn_escape_string(item->units);
 					zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "%sunits='%s'",
 							d, units_esc);
+					zbx_free(units_esc);
 					d = ",";
 				}
 				if (0 != (item->flags & ZBX_FLAG_LLD_ITEM_UPDATE_MULTIPLIER))
@@ -1032,8 +1073,10 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 				}
 				if (0 != (item->flags & ZBX_FLAG_LLD_ITEM_UPDATE_IPMI_SENSOR))
 				{
+					ipmi_sensor_esc = DBdyn_escape_string(item->ipmi_sensor);
 					zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "%sipmi_sensor='%s'",
 							d, ipmi_sensor_esc);
+					zbx_free(ipmi_sensor_esc);
 					d = ",";
 				}
 				if (0 != (item->flags & ZBX_FLAG_LLD_ITEM_UPDATE_SNMP_COMMUNITY))
@@ -1174,10 +1217,8 @@ static void	lld_items_save(zbx_uint64_t hostid, zbx_uint64_t parent_itemid, zbx_
 	zbx_free(snmpv3_securityname_esc);
 	zbx_free(port_esc);
 	zbx_free(snmp_community_esc);
-	zbx_free(ipmi_sensor_esc);
 	zbx_free(logtimefmt_esc);
 	zbx_free(formula_esc);
-	zbx_free(units_esc);
 	zbx_free(trapper_hosts_esc);
 	zbx_free(delay_flex_esc);
 	zbx_free(key_proto_esc);
@@ -1404,9 +1445,9 @@ void	lld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, zbx_vector_p
 	while (NULL != (row = DBfetch(result)))
 	{
 		zbx_uint64_t	parent_itemid, valuemapid, interfaceid;
-		const char	*name_proto, *key_proto, *params_proto, *snmp_oid_proto, *delay_flex, *trapper_hosts,
-				*units, *formula, *logtimefmt, *ipmi_sensor, *snmp_community, *port,
-				*snmpv3_securityname, *snmpv3_authpassphrase, *snmpv3_privpassphrase, *username,
+		const char	*name_proto, *key_proto, *units_proto, *params_proto, *ipmi_sensor_proto,
+				*snmp_oid_proto, *delay_flex, *trapper_hosts, *formula, *logtimefmt, *snmp_community,
+				*port, *snmpv3_securityname, *snmpv3_authpassphrase, *snmpv3_privpassphrase, *username,
 				*password, *publickey, *privatekey, *description_proto, *snmpv3_contextname;
 		unsigned char	type, value_type, data_type, status, multiplier, delta, snmpv3_securitylevel,
 				snmpv3_authprotocol, snmpv3_privprotocol, authtype;
@@ -1424,14 +1465,14 @@ void	lld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, zbx_vector_p
 		trends = atoi(row[9]);
 		ZBX_STR2UCHAR(status, row[10]);
 		trapper_hosts = row[11];
-		units = row[12];
+		units_proto = row[12];
 		ZBX_STR2UCHAR(multiplier, row[13]);
 		ZBX_STR2UCHAR(delta, row[14]);
 		formula = row[15];
 		logtimefmt = row[16];
 		ZBX_DBROW2UINT64(valuemapid, row[17]);
 		params_proto = row[18];
-		ipmi_sensor = row[19];
+		ipmi_sensor_proto = row[19];
 		snmp_community = row[20];
 		snmp_oid_proto = row[21];
 		port = row[22];
@@ -1451,24 +1492,24 @@ void	lld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, zbx_vector_p
 		snmpv3_contextname = row[36];
 
 		lld_items_get(parent_itemid, &items, type, value_type, data_type, delay, delay_flex, history, trends,
-				trapper_hosts, units, multiplier, delta, formula, logtimefmt, valuemapid, ipmi_sensor,
-				snmp_community, port, snmpv3_securityname, snmpv3_securitylevel, snmpv3_authprotocol,
-				snmpv3_authpassphrase, snmpv3_privprotocol, snmpv3_privpassphrase, authtype, username,
-				password, publickey, privatekey, description_proto, interfaceid, snmpv3_contextname);
+				trapper_hosts, multiplier, delta, formula, logtimefmt, valuemapid, snmp_community, port,
+				snmpv3_securityname, snmpv3_securitylevel, snmpv3_authprotocol, snmpv3_authpassphrase,
+				snmpv3_privprotocol, snmpv3_privpassphrase, authtype, username, password, publickey,
+				privatekey, description_proto, interfaceid, snmpv3_contextname);
 
-		lld_items_make(&items, name_proto, key_proto, params_proto, snmp_oid_proto, description_proto,
-				lld_rows);
+		lld_items_make(&items, name_proto, key_proto, units_proto, params_proto, ipmi_sensor_proto,
+				snmp_oid_proto, description_proto, lld_rows);
 
 		lld_items_validate(hostid, &items, error);
 
 		lld_applications_make(parent_itemid, &items, &del_itemappids);
 
 		lld_items_save(hostid, parent_itemid, &items, key_proto, type, value_type, data_type, delay,
-				delay_flex, history, trends, status, trapper_hosts, units, multiplier, delta, formula,
-				logtimefmt, valuemapid, ipmi_sensor, snmp_community, port, snmpv3_securityname,
-				snmpv3_securitylevel, snmpv3_authprotocol, snmpv3_authpassphrase, snmpv3_privprotocol,
-				snmpv3_privpassphrase, authtype, username, password, publickey, privatekey, interfaceid,
-				&del_itemappids, snmpv3_contextname);
+				delay_flex, history, trends, status, trapper_hosts, multiplier, delta, formula,
+				logtimefmt, valuemapid, snmp_community, port, snmpv3_securityname, snmpv3_securitylevel,
+				snmpv3_authprotocol, snmpv3_authpassphrase, snmpv3_privprotocol, snmpv3_privpassphrase,
+				authtype, username, password, publickey, privatekey, interfaceid, &del_itemappids,
+				snmpv3_contextname);
 
 		lld_item_links_populate(lld_rows, parent_itemid, &items);
 
