@@ -1,6 +1,8 @@
 Changes for 2.5.0
 
 New features:
+........S. [ZBXNEXT-1799] added support of low-level discovery macros in "IPMI sensor" field (Sasha)
+........S. [ZBXNEXT-2079] added support of low-level discovery macros in "Units" field (Sasha)
 ...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable tcp based queries (wiper)
 ...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)
 
